[gd_scene load_steps=16 format=3 uid="uid://bty12pwf3uotq"]

[ext_resource type="Script" path="res://characters/npcs/npc_base_class/npc.gd" id="1_pda6j"]
[ext_resource type="Texture2D" uid="uid://btahse7qq1uhd" path="res://characters/npcs/bettler1/bettler1.png" id="2_l0vg7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bg0ao"]
size = Vector2(20, 4)

[sub_resource type="AtlasTexture" id="AtlasTexture_213rf"]
atlas = ExtResource("2_l0vg7")
region = Rect2(204, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kioh"]
atlas = ExtResource("2_l0vg7")
region = Rect2(238, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5bqd"]
atlas = ExtResource("2_l0vg7")
region = Rect2(272, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3fmd"]
atlas = ExtResource("2_l0vg7")
region = Rect2(306, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w6bn"]
atlas = ExtResource("2_l0vg7")
region = Rect2(0, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmwnn"]
atlas = ExtResource("2_l0vg7")
region = Rect2(34, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebjyn"]
atlas = ExtResource("2_l0vg7")
region = Rect2(68, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oyg8"]
atlas = ExtResource("2_l0vg7")
region = Rect2(102, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkk2c"]
atlas = ExtResource("2_l0vg7")
region = Rect2(136, 2, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_8uhm1"]
atlas = ExtResource("2_l0vg7")
region = Rect2(170, 2, 33, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_7wqtt"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_213rf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kioh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5bqd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3fmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kioh")
}],
"loop": true,
"name": &"idle",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w6bn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmwnn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebjyn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oyg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkk2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8uhm1")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n6rf0"]
height = 42.0

[node name="CharacterBody2D" type="CharacterBody2D" groups=["NPC"]]
z_index = 50
script = ExtResource("1_pda6j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_bg0ao")

[node name="Timer" type="Timer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, 0)
sprite_frames = SubResource("SpriteFrames_7wqtt")
animation = &"idle"
autoplay = "idle"

[node name="SlowdownArea" type="Area2D" parent="." groups=["NPC"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SlowdownArea"]
position = Vector2(0, 16)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_n6rf0")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 9.0
offset_top = -20.0
offset_right = 17.0
offset_bottom = 3.0
text = "E"
fit_content = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="SlowdownArea" to="." method="_on_slowdown_area_body_entered"]
[connection signal="body_exited" from="SlowdownArea" to="." method="_on_slowdown_area_body_exited"]
